--- a/index.html
+++ b/index.html
@@ -52,79 +52,12 @@
             </div>
         </section>
         <section class="gallery-container">
-            <h2>Latest Posts</h2>
+            <h2>Latest Post</h2>
             <div class="galleryshow"> 
-                <div class="gallery one">
-                    <div class="gallery-picture">
-                       <img src="/images/home/tiraya-adam-QfHEWqPelsc-unsplash.jpg" alt=" a photo of mountain"> 
-                       <figcaption> <p>Kilimanjaro</p> </figcaption>
-                    </div>
-                    <div class="gallery-picture">
-                        <img src="/images/home/andres-garcia-_3IyE1dKrN8-unsplash.jpg" alt=" a photo of paragrading"> 
-                        <figcaption> <p>Bujumbura</p> </figcaption>
-                    </div>
-                    <div class="gallery-picture"> 
-                        <img src="/images/home/niklas-weiss--2WlTWZLnRc-unsplash.jpg" alt=" a photo of landscape"> 
-                        <figcaption> <p>Bali</p> </figcaption>
-                    </div>
-                    <div class="gallery-picture">
-                        <img src="/images/home/lorenzo-fatto-offidani-de5OZMjb5ww-unsplash.jpg" alt=" a photo of a man boxing"> 
-                        <figcaption> <p>Training</p> </figcaption>
-                    </div>
-                </div> 
-                <div class="gallery two"> 
-                    <div class="gallery-picture">
-                       <img src="/images/home/20180701_200703.jpg" alt=" persons kiting in at water"> 
-                       <figcaption> <p>Lake Tanganyika</p> </figcaption>
-                    </div>
-                    <div class="gallery-picture">
-                        <img src="/images/home/mario-klassen-70YxSTWa2Zw-unsplash.jpg" alt="football match on a stadion"> 
-                        <figcaption> <p>Champions League</p> </figcaption>
-                    </div>
-                    <div class="gallery-picture">
-                        <img src="/images/home/neonbrand-UegcSdRtmlg-unsplash.jpg" alt=" basketball match on a stadion"> 
-                        <figcaption> <p>NBA</p> </figcaption>
-                    </div>
-                    <div class="gallery-picture">
-                        <img src="/images/home/attentie-attentie-ig7vN6OkGNE-unsplash.jpg" alt=" boxing match"> 
-                        <figcaption> <p>Boxing </p> </figcaption>
-                    </div>
-                </div> 
                 <button class="prev">&#10094;</button>
                 <button class="next">&#10095;</button>
-            </div>
-        </section>
-        <section>
-            <h4>Featured Posts</h4>
-            <div class="featured-blog">
-                
-            
-                <!-- <div class="featured-blog-picture">
-                    <img src="/images/home/naitian-tony-wang-vjCiYZuEApk-unsplash.jpg" alt=" a person running to surf"> 
-                    <h5>EAF Sunrise</h5>
-                </div>
-                <div class="featured-blog-picture">
-                    <img src="/images/home/attentie-attentie-ig7vN6OkGNE-unsplash.jpg" alt=" boxing match"> 
-                    <h5>Boxing Game</h5>
-                </div>
-                <div class="featured-blog-picture">
-                    <img src="/images/home/graphic-node-N-AC7tTcD-c-unsplash.jpg" alt=" a photo of food market">
-                    <h5>Food Market</h5>
-                </div>
-                <div class="featured-blog-picture">
-                    <img src="/images/home/derek-thomson-TWoL-QCZubY-unsplash.jpg" alt=" a photo of a beach spot">
-                    <h5>Beach Spots</h5>
-                </div>
-                <div class="featured-blog-picture">
-                    <img src="/images/home/rolands-varsbergs-miKmVyq3qhE-unsplash.jpg" alt=" a photo of river in jungle"> 
-                    <h5>Hike Spots</h5>
-                </div>
-                <div class="featured-blog-picture">
-                    <img src="/images/home/20180701_200703.jpg" alt=" persons kiting in at water"> 
-                    <h5>Kiting Spots</h5> -->
-                <!-- </div> --> 
-            </div>
-        </section>
+            </div>   
+        </section> 
     </main>
     <footer>
         <div class="footer-wrapper">
