--- a/specific.html
+++ b/specific.html
@@ -33,9 +33,10 @@
     </header>
     <main class="specific-container">
         <section class="specific">
-          <div class="container">
+          <div class="container"></div>
             <div class="blog-specific"></div>
           </div>
+          <a href=""></a>
         </section>
     </main>
     <footer>
