--- a/index.html
+++ b/index.html
@@ -51,12 +51,17 @@
                 </div>
             </div>
         </section>
-        <section class="gallery-container">
-            <h2>Latest Post</h2>
-            <div class="galleryshow"> 
-                <button class="prev">&#10094;</button>
-                <button class="next">&#10095;</button>
-            </div>   
+        <section >
+            <div class="gallery-container"> 
+                <h2>Latest Post</h2>
+                <div class="galleryshow"> </div> 
+                <div>
+                    <button class="prev">&#10094;</button>
+                    <button class="next">&#10095;</button> 
+                </div> 
+            </div>
+            
+            
         </section> 
     </main>
     <footer>
