--- a/specific.html
+++ b/specific.html
@@ -32,10 +32,9 @@
         </nav>
     </header>
     <main class="specific-container">
-        <section class="specific">
-          <div class="container"></div>
+        <h1>Specific Posts</h1>
+        <section >
             <div class="blog-specific"></div>
-          </div>
         </section>
     </main>
     <footer>
